style.css
/* Colors and font styles

dark bg:        --------    #302d2e
dark accent:    --------    #b09070
main color:     --------    #da5653
light accent:   --------    #e08e5d
whites:         --------    #f2f4f1
low contrast dark text:     #c6b2b2


*/
* {
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

body {
    height: 100vh;
    display: flex;
    flex-direction: column;
    margin: 0;
    padding: 0;
}

ul {
    list-style: none;
}

a {
    text-decoration: none;
    color: #c6b2b2;
}

a:hover {
    color: #da5653;
}

/* 
stole this from stack overflow
wanted a box shadow over the first div without being ruined
by adding a bg color to the second
idk man it works i guess
*/
#first{
    position:relative;
    z-index:2;
}

.container-main {
    background-color: #302d2e;
    display: flex;
    flex-direction: column;
    padding: 8px 256px;
    box-shadow: 0 8px 12px 8px #0000003a;
}

.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.header-logo-text {
    color: #f2f4f1;
    font-size: 24px;
}

.header-nav {
    display: flex;
    gap: 36px;
}

.nav-button {
    background-color: transparent;
    border-color: transparent;
    font-size: 24px;
    border-radius: 16px;
}

.nav-button:hover {
    box-shadow: 3px 3px 6px 4px #00000066,
    -3px -3px 6px 4px #ffffff20;
    cursor: pointer;
}

.content-main {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    padding: 96px 0;
}

.content-main-info {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    flex-shrink: 0;
    width: 480px;
    gap: 32px;
}

.content-main-title {
    color: #f2f4f1;
    font-size: 48px;
    font-weight: bolder;
    margin-bottom: -48px;
}

.content-main-text {
    color: #c6b2b2;
}

.content-main-button {
    background-color: #da5653;
    border: solid 2px #da5653;
    border-radius: 8px;
    box-shadow: 6px 6px 6px #00000066;
    color: #f2f4f1;
    width: 164px;
    height: 64px;
    padding: 8px 16px;
    font-size: 20px;
    font-weight: bold;
}

.content-main-button:hover {
    background-color: #00000033;
    cursor: pointer;
}

.content-main-image {
    max-width: 640px;
    max-height: 460px;
    flex: 0 1 0;
    border: solid 2px;
    border-color: to-linear;
    border-radius: 32px;
    box-shadow: 12px 12px 12px 12px #00000066;
}

.content-gallery {
    background-color: #f2f4f1;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 32px 64px;
}

.gallery-card-container {
    display: flex;
    flex-wrap: wrap;
    padding: 128px;
    gap: 64px;
}

.gallery-card {
    display: flex;
    flex-direction: column;
    flex: auto;
    align-items: center;
    justify-content: flex-start;
    gap: 24px 16px;
}

.gallery-card-image {
    width: 280px;
    height: 280px;
    border: solid 3px #e08e5d;
    border-radius: 64px / 16px;
    box-shadow: 0px 4px 4px 4px #302d2e33;
    flex: none;
}

.gallery-card-text {
    color: #302d2e;
    -webkit-flow-into: 17px;
    font-weight: lighter;
    flex: 1;
    width: 240px;
    text-align: center;
}

.quote-container {
    background-color: #E5E7EB;
    display: flex;
    flex-direction: column;
    padding: 96px 296px;
    gap: 16px;
}

.quote-text {
    color: #302d2ecc;
    font-size: 36px;
    align-self: flex-start;
}

.quote-author {
    color: #302d2e;
    font-size: 24px;
    align-self: flex-end;
}

.container-bottom {
    background-color: #f2f4f1;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    padding: 64px;
}

.container-action {
    background-color: #da5653;
    border-radius: 12px;
    color: #E5E7EB;
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    width: 740px;
    height: 132px;
    padding: 48px 164px;
}

.container-action-text {
    flex: display;
    flex-direction: column;
    width: 360px;
    gap: 12px;
}

.action-title {
    font-size: 22px;
    font-weight: bold;
}

.action-text {
    font-size: 16px;
}

.action-button {
    background-color: #da5653;
    border: 2px solid #E5E7EB;
    border-radius: 12px;
    color: #E5E7EB;
    font-size: 24px;
    font-weight: bold;
    box-shadow: 4px 6px 0 #302d2e44;
    height: 64px;
    width: 196px;
    padding: 12px;
}

.action-button:hover {
    background-color: #00000033;
    cursor: pointer;
}

.footer {
    background-color: #302d2e;
    color: #E5E7EB;
    text-align: center;
    height: 196px;
    width: auto;
    padding-top: 12px;
    padding-bottom: 32px;
    flex: auto;
}

